--- a/Initial results/initial_results.Rmd
+++ b/Initial results/initial_results.Rmd
@@ -4,11 +4,9 @@ subtitle: "Volatility Around Earnings"
 author: "Jacob Baier"
 date: "`r format(Sys.time(), '%B %d, %Y')`"
 output:
+  pdf_document: default
   html_document:
     df_print: paged
-  pdf_document: default
-header-includes:
-  - \setlength{\parindent}{4em}
 ---
 <!--load packages-->
 ```{r setup, include=FALSE}
@@ -21,6 +19,10 @@ df_post_earnings <- read_csv("post_earnings_realized_volatility.csv")
 <!--to knit to pdf install.packages("tinytex")
     tinytex::install_tinytex()
     it will take a while-->
+    
+<!-- for para. indentation:
+  header-includes:
+  - \setlength{\parindent}{4em}-->
 
 <!--massage data-->
 ```{r, include=FALSE}
@@ -175,7 +177,7 @@ df_pre_earnings <-
 
 In a similar fashion to the *Move-Ratio vs Subsequent Realized Volatility* section, we compared the same Move Ratio Rank to the average standard deviation leading up to earnings day. Recall that the standard deviation for 5 days before we called S.D -5 as detailed in the *Terms and Definitions* section above. The graph included in this section is for the 5 day lead-up S.D whereas the other three graphs (-3/-7/-10) are again indcluded in the appendix.  
   
-At first glance the graph is very similar to that of the post earnings volatility graphs. Indeed the shape of the data is similar but there are a key differences that greatly affect the conclusions that can be drawn from the data. The biggest distinction is in the extreme of rank; specifically withing the top 25% or ~75 and up. Here the data greatly divegerges from the tight grouping seend in the lower ranks. This divergences that S.D is more randomly ditributed in the associated Move Ratios. So, a high move ratio on earnings day is not predicted by the standard deviation leading up. In addition, the large distribution skews the fit line upwards by a large amount. The results is what appears to be a positive correlation whereas it should be trended more towards zero; as depicted by the tight and flat distribution of means in the lower ranks.
+At first glance the graph is very similar to that of the post earnings volatility graphs. Indeed the shape of the data is similar but there are a key differences that greatly affect the conclusions that can be drawn from the data. The biggest distinction is in the extreme of rank; specifically withing the top 25%. Here the data greatly divegerges from the tight grouping seen in the lower ranks. This divergences that S.D is more randomly ditributed in the associated Move Ratios. So, a high move ratio on earnings day is not predicted by the standard deviation leading up. In addition, the large distribution skews the fit line upwards by a large amount. The results is what appears to be a positive correlation whereas it should be trended more towards zero; as depicted by the tight and flat distribution of means in the lower ranks.
 Overall, a high move ratio on earnings is more associated with a random distribution of volatility leading up to that day, and a less than large ratio is barely correlated, if at all. 
 
 ```{r, echo = F, fig.align = 'center', warning= FALSE}
