--- a/Initial results/initial_results.Rmd
+++ b/Initial results/initial_results.Rmd
@@ -4,9 +4,9 @@ subtitle: "Volatility Around Earnings"
 author: "Jacob Baier"
 date: "`r format(Sys.time(), '%B %d, %Y')`"
 output:
+  pdf_document: default
   html_document:
     df_print: paged
-  pdf_document: default
 ---
 <!--load packages-->
 ```{r setup, include=FALSE}
@@ -179,7 +179,11 @@ df_post_earnings<-
              , c("earnings_date"= "earnings_date", "symbol" = "symbol"))
 ```
 
-
+The next two sections deal with what happens leading up to the earnings date. This section we analyzed the stock returns in a given window preceeding earnings and in the following section we analyzed the volatility preceeding earnings. The goal of these sections was to get a sense on how the stocks' performance leading up to earnings might affect the results on earnings day and in the days following.  
+  
+As mentioned, we calculated the returns for each stock in the time windows (-2,-3,-5,-7,-10 days) leading up to earnings; with the inclusion of -2 days. In order to perform a similar analysis to post earings, we again graphed the returns against *Move Ratio Rank*. For this section we chose to use the -2 returns; while all five are very similar 2 days lead-up is very close to earnings and would be the most descriptive of any trends there are. As before, the remaining 4 graphs are located in the appendix (the same is true for the second graph of this section).  
+  
+From the graph below, there are a few features that stand out. First is the extremely flat grouping leading up to very widely distributed returns near the extreme. Near the extreme, this tell us that the data is more randomly distributed. Whereas, the rest of the data is nearly equivalent regardless of what move ratio was observed on earnings day. In short, this tells us that returns leading up to earnings has almost no correlation with the eventual observed move ratio. It is also worth noting that the linear fit is deflected upwards slightly by the large outliers near the extreme. This means that returns are, at best, a very mild predictor of volatility on earnings. However, this should in general only be considered true for very high volatility leading up.  
 
 ```{r returns graphs, echo = FALSE, fig.align='center'}
 df_pre_returns %>% 
@@ -197,6 +201,7 @@ df_pre_returns %>%
 
 ```
 
+The second graph of this section is almost exactly the same as in the section *Gain vs. Loss*. The key difference is that in the afformentioned section, the gain/loss split was the direction of the stocks' move on earings day. Whereas here we split via the direction of the stocks' overall move for the five day lead-up. The same positive correlation exist here as it did for the earlier graphs. Howver, the increase correlation for loss is not present. So, while this shows the same volatility clustering, a loss leading up to earings will not further predict a jump as compared to a gain leading up.
 
 ```{r post vol and leadup move direction, echo=FALSE, fig.align='center'}
 df_post_earnings %>% 
@@ -235,8 +240,8 @@ df_pre_earnings <-
 
 In a similar fashion to the *Move-Ratio vs Subsequent Realized Volatility* section, we compared the same Move Ratio Rank to the average standard deviation leading up to earnings day. Recall that the standard deviation for 5 days before we called S.D -5 as detailed in the *Terms and Definitions* section above. The graph included in this section is for the 5 day lead-up S.D whereas the other three graphs (-3/-7/-10) are again indcluded in the appendix.  
   
-At first glance the graph is very similar to that of the post earnings volatility graphs. Indeed the shape of the data is similar but there are a key differences that greatly affect the conclusions that can be drawn from the data. The biggest distinction is in the extreme of rank; specifically withing the top 25%. Here the data greatly divegerges from the tight grouping seen in the lower ranks. This divergences that S.D is more randomly ditributed in the associated Move Ratios. So, a high move ratio on earnings day is not predicted by the standard deviation leading up. In addition, the large distribution skews the fit line upwards by a large amount. The results is what appears to be a positive correlation whereas it should be trended more towards zero; as depicted by the tight and flat distribution of means in the lower ranks.
-Overall, a high move ratio on earnings is more associated with a random distribution of volatility leading up to that day, and a less than large ratio is barely correlated, if at all. 
+At first glance the graph is very similar to that of the post earnings volatility graphs. Indeed the shape of the data is similar but there are a few differences that greatly affect the conclusions that can be drawn from the data. The biggest distinction is in the extreme of rank; specifically withing the top 25%. Here the data greatly divegerges from the tight grouping seen in the lower ranks. This divergences shows that S.D is more randomly ditributed in the associated Move Ratios. So, a high move ratio on earnings day is not predicted by the standard deviation leading up. In addition, the large distribution skews the fit line upwards by a large amount. The results is what appears to be a positive correlation whereas it should be trended more towards zero; as depicted by the tight and flat distribution of means in the lower ranks.
+Overall, a high move ratio on earnings is more associated with a more random distribution of volatility leading up to that day, and a less than large ratio is barely correlated, if at all. 
 
 ```{r pre earnings vol, echo = F, fig.align = 'center', warning= FALSE}
 df_pre_earnings %>% 
