--- a/Initial results/initial_results.Rmd
+++ b/Initial results/initial_results.Rmd
@@ -179,11 +179,11 @@ df_post_earnings<-
              , c("earnings_date"= "earnings_date", "symbol" = "symbol"))
 ```
 
-The next two sections deal with what happens leading up to the earnings date. This section we analyzed the stock returns in a given window preceeding earnings and in the following section we analyzed the volatility preceeding earnings. The goal of these sections was to get a sense on how the stocks' performance leading up to earnings might affect the results on earnings day and in the days following.  
+The following sections analyze components leading up to earnings. Firstly,We analyzed the stock returns in a given window preceeding earnings and secondly did the same with volatility. The goal of these sections was to get a sense on how the stocks' performance leading up to earnings might affect the results on earnings day and in the days following.  
   
-As mentioned, we calculated the returns for each stock in the time windows (-2,-3,-5,-7,-10 days) leading up to earnings; with the inclusion of -2 days. In order to perform a similar analysis to post earings, we again graphed the returns against *Move Ratio Rank*. For this section we chose to use the -2 returns; while all five are very similar 2 days lead-up is very close to earnings and would be the most descriptive of any trends there are. As before, the remaining 4 graphs are located in the appendix (the same is true for the second graph of this section).  
-  
-From the graph below, there are a few features that stand out. First is the extremely flat grouping leading up to very widely distributed returns near the extreme. Near the extreme, this tell us that the data is more randomly distributed. Whereas, the rest of the data is nearly equivalent regardless of what move ratio was observed on earnings day. In short, this tells us that returns leading up to earnings has almost no correlation with the eventual observed move ratio. It is also worth noting that the linear fit is deflected upwards slightly by the large outliers near the extreme. This means that returns are, at best, a very mild predictor of volatility on earnings. However, this should in general only be considered true for very high volatility leading up.  
+As mentioned, we calculated the returns for each stock in the time windows (-2,-3,-5,-7,-10 days) leading up to earnings; with the inclusion of -2 days. In order to perform a similar analysis to post earings, we again graphed the returns against *Move Ratio Rank*. For this section we chose to use the -2 returns; while all five graphs tend to be similar, the 2-day lead-up is close to earnings and would be the most descriptive of any trends there are due the proximity.  As before, the remaining four graphs are located in the appendix.  
+
+Looking at *Move Ratio Rank against Lead-up Returns*, there are a few features that stand out. The primary feature is the linear grouping with small slope leading up to varying returns near the extreme. This tell us that the data is simply randomly distributed. Whereas, the rest of the data is nearly equivalent regardless of what move ratio was observed on earnings day. In short, this tells us that returns leading up to earnings has almost no correlation with the eventual observed move ratio. It is also worth noting that the linear fit is deflected upwards slightly by the large outliers near the extremes. This means that returns are, at best, a very mild predictor of volatility on earnings. However, this should in general only be considered true for events of high volatility leading up.  
 
 ```{r returns graphs, echo = FALSE, fig.align='center'}
 df_pre_returns %>% 
@@ -201,7 +201,7 @@ df_pre_returns %>%
 
 ```
 
-The second graph of this section is almost exactly the same as in the section *Gain vs. Loss*. The key difference is that in the afformentioned section, the gain/loss split was the direction of the stocks' move on earings day. Whereas here we split via the direction of the stocks' overall move for the five day lead-up. The same positive correlation exist here as it did for the earlier graphs. Howver, the increase correlation for loss is not present. So, while this shows the same volatility clustering, a loss leading up to earings will not further predict a jump as compared to a gain leading up.
+The second graph of this section is very similar as the graph *Move Ratio Rank against Average Standard 5 Day Deviation, split by Gain/Loss*. The key difference is that in the previous section, the gain/loss split was the direction of the stocks' move on earings day. Whereas here we split via the direction of the stocks' overall move for -5 day window. The same positive correlation exist here as it did for the earlier analysis. However, the difference in correlation between gain/loss is not present for lead up returns. Although, this shows similar volatility clustering, a loss leading up to earings will not further predict a jump as compared to a gain during lead up.
 
 ```{r post vol and leadup move direction, echo=FALSE, fig.align='center'}
 df_post_earnings %>% 
